# hpp-task-sequencing

./: CMakeLists.txt  LICENSE  README.md  default.nix  flake.nix  script.py
corba/: CMakeLists.txt  solver.impl.cc  solver.impl.hh  task-sequencing.cc  task-sequencing.hh  tools.impl.cc  tools.impl.hh
corba/hpp/corbaserver/task_sequencing/: __init__.py  client.py
corba/idl/hpp/corbaserver/task-sequencing/: solver.idl  tools.idl
include/hpp/task-sequencing/: fwd.hh  multi-robot-solver.hh
src/: multi-robot-solver.cc
src/config-distances/: distances.cpp  distances.cpp~  distances.h  distances.h~
src/isodata/: Cluster.cpp  Cluster.h  common.h  error.h  isodata.cpp  isodata.h  main.cpp
src/quaternion-barycenter/: quatBarycenter.cpp  quatBarycenter.cpp~  quatBarycenter.h
src/task-distance/: distances.cpp  distances.h
